Fixed maintenance bug